--- a/articles/sty/techbooster-doujin.sty
+++ b/articles/sty/techbooster-doujin.sty
@@ -1,3 +1,6 @@
+%% The MIT License (MIT)
+%% Copyright (c) 2015 TechBooster
+
 \usepackage[most]{tcolorbox}
 \tcbuselibrary{breakable}
 \renewenvironment{shaded}{
